[tool.poetry]
name = "swr2-asr"
version = "0.1.0"
description = ""
authors = ["Philipp Merkel <philippmerkel@outlook.com>"]
license = "MIT"
readme = "readme.md"
packages = [{include = "swr2_asr"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torchaudio = "2.0.1"
audioloader = {git = "https://github.com/marvinborner/AudioLoader.git"}
tqdm = "^4.66.1"
numpy = "^1.25.2"
mido = "^1.3.0"
tokenizers = "^0.13.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
ruff = "^0.0.285"
types-tqdm = "^4.66.0.1"

[tool.ruff]
select = ["E", "F", "B", "I"]
fixable = ["ALL"]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120

[tool.poetry.scripts]
train = "swr2_asr.train:run_cli"
train-bpe-tokenizer = "swr2_asr.tokenizer:train_bpe_tokenizer"
train-char-tokenizer = "swr2_asr.tokenizer:train_char_tokenizer"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
