[tool.poetry]
name = "swr2-asr"
version = "0.1.0"
description = ""
authors = [
    "Philipp Merkel <philippmerkel@outlook.com>",
    "Valentin Schmidt <valentin.j.schmidt@web.de>",
    "Marvin Borner <git@marvinborner.de>",
    "Silja Kasper <>"
    ]
license = "MIT"
readme = "readme.md"
packages = [{include = "swr2_asr"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torchaudio = "2.0.1"
tqdm = "^4.66.1"
numpy = "^1.25.2"
mido = "^1.3.0"
click = "^8.1.7"
matplotlib = "^3.7.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
ruff = "^0.0.285"

[tool.ruff]
select = ["E", "F", "B", "I"]
fixable = ["ALL"]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.poetry.scripts]
train = "swr2_asr.train:main"
recognize = "swr2_asr.inference:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
